enhance filters and there tests
- filters are now components
- add und use ComponentPropertyType annotation @FilteringType
- remove BundleActivators
- fix json-path-filter test
- remove unused bundle install instructions in tests

Change-Id: If9233bf1f3dd145750199b5d498eff0a2f8805d2
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>